[package]

name = "hyper"
version = "0.11.27" # don't forget to update html_root_url
description = "A modern HTTP library."
readme = "README.md"
homepage = "https://hyper.rs"
documentation = "https://docs.rs/hyper"
repository = "https://github.com/hyperium/hyper"
license = "MIT"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
keywords = ["http", "hyper", "hyperium"]
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
bytes = {path = "../bytes"}
futures = "0.1.17"
futures-cpupool = "0.1.6"
http = {path = "../http", optional = true }
httparse = "1.0"
hyper-old-types = {path = "../hyper-old-types"}
iovec = {path = "../iovec-backport"}
log = "0.4"
net2 = {path = "../net2-rs"}
relay = "0.1"
time = {path = "../time"}
tokio-core = {path = "../tokio-core"}
tokio-proto = { path = "../tokio-proto", optional = true }
tokio-service = "0.1"
tokio-io = {path = "../tokio/tokio-io"}
want = "0.0.4"

[dev-dependencies]
num_cpus = "1.0"
pretty_env_logger = "0.2.0"
spmc = "0.2"
url = "1.0"

[features]
default = ["server-proto"]
nightly = []
raw_status = []
compat = [ "hyper-old-types/compat", "http" ]
server-proto = ["tokio-proto"]
